--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,5 +5,5 @@ api-version: '1.21'
 authors: [Levi, _1ms]
 commands:
   sheepwars:
-    aliases: [fencysheepwars, fsw, sw]
+    aliases: [fancysheepwars, fsw, sw]
     description: main command
