messages.yml updated

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -21,41 +21,62 @@ Arena:
   List: '%prefix% &fArenas: &a%arenas%'
   Delete: '%prefix% &cYou have deleted the &4%arena_name% &crena!'
   Create: '%prefix% &aYou have created the &2%arena_name% &aarena!'
-  Arenas: '%prefix%&fAvailable arenas:'
+  Arenas: '%prefix% &fAvailable arenas:'
   NoSuchArena: '%prefix% &cNo such arena!'
   ArenaIsFull: '%prefix% &cThe arena is full!'
   ArenaStarted: '%prefix% &cThe arena has already started!'
   NotInAnArena: '%prefix% &cYou are not in an arena!'
   AlreadyInArena: '&eYou are already in an arena!'
-  NumberOnly: '%prefix%&cNumber only!'
-  PairsOnly: '%prefix%&cPairs only!'
-  CanPositive: '%prefix%&cCan positive number only!'
-  ItAlreadyExists: '%prefix%&cAn arena with this name already exists!'
-  PlayersInside: '%prefix%&cYou cant delete this arena while players are inside.'
+  NumberOnly: '%prefix% &cNumber only!'
+  PairsOnly: '%prefix% &cPairs only!'
+  CanPositive: '%prefix% &cCan positive number only!'
+  ItAlreadyExists: '%prefix% &cAn arena with this name already exists!'
+  PlayersInside: '%prefix% &cYou cant delete this arena while players are inside.'
 
   Setup:
     setWaitingLobby: '%prefix% &aYou have set the waiting lobby! &8(&2%arena_name%&8)'
     setTeamSpawn: '%prefix% &aSpawn point set! &8(&2%team%&8)'
     setSheepSpawn: '%prefix% &aYou have set the sheep spawn location! &8(&a%team%&8)'
-    AlreadyInProgress: '%prefix%&cSomeone is already setting up this arena!'
-    AlreadySettingUp: '%prefix%&cYou are already setting up this arena!'
-    Setup: '%prefix%&aYou are currently setting up the &2%arena_name% &aarena!'
+    AlreadyInProgress: '%prefix% &cSomeone is already setting up this arena!'
+    AlreadySettingUp: '%prefix% &cYou are already setting up this arena!'
+    Setup: '%prefix% &aYou are currently setting up the &2%arena_name% &aarena!'
 Scoreboards:
   Lobby:
-    title: 'FancySheepWars'
+    title:
+      - '&c&lF&rancySheepWars'
+      - 'F&c&la&rncySheepWars'
+      - 'Fa&c&ln&rcySheepWars'
+      - 'Fan&c&lc&rySheepWars'
+      - 'Fanc&c&ly&rSheepWars'
+      - 'Fancy&c&lS&rheepWars'
+      - 'FancyS&c&lh&reepWars'
+      - 'FancySh&c&le&repWars'
+      - 'FancyShe&c&le&rpWars'
+      - 'FancyShee&c&lp&rWars'
+      - 'FancySheep&c&lW&rars'
+      - 'FancySheepW&c&la&rrs'
+      - 'FancySheepWa&c&lr&rs'
+      - 'FancySheepWar&c&ls&r'
+      - '&c&lFancySheepWars'
+      - '&f&lFancySheepWars'
+      - '&c&lFancySheepWars'
+      - '&f&lFancySheepWars'
+      - '&6&lFANCY!'
+      - '&f&lFANCY!'
+      - '&6&lFANCY!'
     lines:
-      - 'Online players: %online_players%'
+      - '&7Online players: &f%online_players%'
       - '&c'
       - '&eStats:'
       - '&a'
-      - '&7Wins: &f%wins%'
-      - '&7Kills: &f%kills%'
-      - '&7Deaths: &f%deaths%'
+      - '&8» &7Wins: &f%wins%'
+      - '&8» &7Kills: &f%kills%'
+      - '&8» &7Deaths: &f%deaths%'
       - '&4'
-      - '&eyourServer.com'
+      - '&e  yourServer.com'
   Waiting:
     title: 'FancySheepWars'
     lines:
   Ingame:
-    title: 'FancySheepWars'
+    title: 'FancySheepWars game'
     lines:
